- Fixed display of file paths containing non-ascii characters in the title bar and startup dialog
- Fixed some erroneous plugin debug messages
- IN PROGESS: Allow plugins to be translated
  + Notes:
    - Is it a problem to sync KDE_LANG and LANGUAGE? Should that also be set for the backend?
    - Message extraction: Should we do this in R, using XiMpLe? That might allow us to give better context / comments
    - Don't forget to write documentation
    - What should be the policy regarding installing translations (80% criterion)
    - discuss i18n_context vs. comments
    - Important pitfalls: String comparison with checkbox / radio labels! (Probably wrong in some plugins)
    - i18n'ed plugins vs. automated tests
      - Sure, we can run automated tests under C locale. But it would be nice to have an additional check that translations don't cause
        any obvious problems.
        - At least we could check for errors
        - Perhaps a special diff of the generated R commands, where all quoted strings and comments are stripped?
   - i18n calls
    - wcgrep getStringAttribute.*i18n
    - element text

--- Version 0.6.2 - Oct-20-2014
- In data editor, indicate NAs, explicitly
- Import Stata plugin gains option to convert character encoding.
- New plugin for recoding categorical data
- New embeddable (minimal) plugin "multi_input" to combine different input elements
- Fixed: Problems starting from paths with spaces in the file name on Windows
- Added command line option --r-executable for switching between several installations of R
- Use a binary wrapper, instead of wrapper shell script for startup on all platforms
- Linear regression plugin gains option to save predicted values
- Fixed some compilation problems
- Add basic support to export plots using tikzDevice
- Fixed: cbind-value of <matrix> element was missing commas
- Fixed: Give a label to an unlabelled toolbar
- Fixed: Adjust to (re-?)named parameters for options("pager")